
Changelog for relaydelay.pl and associated files:

UNRELEASED -

  2003-07-22 - Cleaned up a small mite in the reverse_track function.  It
    probably won't cause anyone trouble, but fixed anyway.

0.04 - Release

  2003-07-21 - Fixed a pretty serious bug if the config option 
    $tempfail_messages_after_data_phase was enabled.  Please do not use 
    version 0.03 for this reason.

0.03 - Release

  2003-07-19 - A few cosmetic changes and comment updates.

  2003-07-15 - Added an update whereby manual whitelist entries for localhost
    and other local interface addresses are no longer necessary, as the 
    milter now considers any mail that is "looped back" on a local interface
    as being local and exempt from the greylist checks.

  2003-07-15 - Fixed a bug where mail that looks as if it is spoofed from
    a local domain was not being checked, due to sendmail lying about it 
    coming from the "local" mailer when it's really not local.

  2003-07-13 - CONFIG CHANGE - Changed the milter to have config parameters
    for the milter/sendmail interface.  Now the only option to the milter
    script is an optional config file if different from the default location.
    This also removes the requirement of modifying the milter script if the
    config is stored in a different location.

  2003-07-13 - NEW OPTION - Added a config option to limit the number of 
    threads the milter will spawn.  Once a thread is spawned it will continue
    to exist until the milter is shutdown.  Since each thread increases the
    memory footprint, and consumes a db connection, this is a good way to 
    limit both.

  2003-07-12 - Fixed a small problem where bounce messages were not properly
    expired as they should be.  Also fixed some minor warnings.

  2003-07-11 - Backed out changes for trying to fix the accounting error of
    a few days ago.  The "solution" caused more trouble  than the problem.

  2003-07-10 - NEW OPTION - Added a new feature to automatically 