@@ -49,6 +49,25 @@ $milter_filter_name = 'relaydelay';
 #   definition in the sendmail.mc file.
 $milter_socket_connection = 'local:/var/run/relaydelay.sock';
 
+# This config option specifies where sendmail's access.db file is located.  
+#   If you don't want the milter to check the access.db, just set this equal 
+#   to undef.
+# If enabled, the access db will be checked to see if there are matching
+#   ip or address entries that should make us bypass the greylist checks.
+# NOTE: These checks assume that the sendmail FEATURE(`relay_hosts_only') 
+#   is not enabled.  If you do have that enabled, the checks in the milter
+#   will be more permissive than you want.
+#   In addition, the milter will heed entries in the access db even if
+#   your sendmail configuration doesn't check certain types, so make sure
+#   you don't have any entries that sendmail will ignore unless you want 
+#   to suffer the consequences.
+#   For more information on access db options, see:
+#     http://www.sendmail.org/~ca/email/doc8.12/cf/m4/anti_spam.html
+#   For additional information, please also see the README file.
+#
+#my $sendmail_accessdb_file = undef;
+$sendmail_accessdb_file = '/etc/mail/access.db';
+
 # Where the pid file should be stored for relaydelay
 $relaydelay_pid_file = '/var/run/relaydelay.pid';
 
